[tool.poetry]
name = "bunting"
version = "0.1.4"
description = "SDK for geospatial APIs like OpenStreetMap and Census"
authors = ["Brendan Ashworth <brendan@buntinglabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
